--- a/src/pages/_common/inputs/styles/timeInput.css
+++ b/src/pages/_common/inputs/styles/timeInput.css
@@ -3,6 +3,8 @@
 }
 
 .rc-time-picker-input {
+  border-radius: 4px;
+  border: 1px solid #ced6da;
   color: #17262b;
   height: auto;
   font-size: 16px;
