--- a/src/pages/_common/inputs/styles/timeInput.css
+++ b/src/pages/_common/inputs/styles/timeInput.css
@@ -3,10 +3,32 @@
 }
 
 .rc-time-picker-input {
-  border-radius: 4px;
-  border: 1px solid #ced6da;
+  width: 100%;
+  position: relative;
+  font-size: 12px;
+  font-family: Rubik-Regular;
   color: #17262b;
-  height: auto;
-  font-size: 16px;
-  padding: 6px;
+  line-height: 32px;
+  height: 32px;
+  padding: 0px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border: 1px solid #ced6da;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+.rc-time-picker-panel-select li {
+  list-style: none;
+  box-sizing: content-box;
+  margin: 0;
+  padding: 0 0 0 16px;
+  width: 100%;
+  line-height: 30px;
+  text-align: left;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
