--- a/src/pages/app/reset.css
+++ b/src/pages/app/reset.css
@@ -16,7 +16,7 @@
 */
 
 html {
-  font-family: sans-serif; /* 1 */
+  font-family: Rubik-Regular, sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
